--- a/.github/workflows/hook.yml
+++ b/.github/workflows/hook.yml
@@ -1,17 +1,17 @@
-# This is a basic workflow to help you get started with Actions
 
-name: CI
+name: main
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      message:
+        description: 'Message. What changes were made?'
+        required: false
+        default: 'Updated Figma'
+      version:
+        description: 'Which version of the Figma document to use?'
+        required: false
+        default: '' # Will use latest if not set
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
