--- a/.github/workflows/hook.yml
+++ b/.github/workflows/hook.yml
@@ -1,4 +1,3 @@
-
 name: main
 
 on:
@@ -12,6 +11,9 @@ on:
         description: 'Which version of the Figma document to use?'
         required: false
         default: '' # Will use latest if not set
+  push:
+    branches:
+      - "main"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
