--- a/.github/workflows/hook.yml
+++ b/.github/workflows/hook.yml
@@ -15,24 +15,39 @@ on:
     branches:
       - "main"
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  build-unix:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: ["ubuntu-latest"]
+        node-version: [14.x]
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Inputs
+        id: input-messages
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "MESSAGE ---> '${{ github.event.inputs.message }}'"
+          echo "VERSION ---> '${{ github.event.inputs.version }}'"
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        id: node
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install Figmagic
+        id: install
+        run: npm install -D figmagic
+
+      - name: Run Figmagic and use latest Figma data
+        id: figma-latest
+        if: ${{ !github.event.inputs.version }}
+        run: npx figmagic --token ${{ secrets.FIGMA_TOKEN }} --url ${{ secrets.FIGMA_URL }}
+
+      - name: Run Figmagic and use named version of Figma data
+        id: figma-versioned
+        if: ${{ github.event.inputs.version }}
+        run: npx figmagic --token ${{ secrets.FIGMA_TOKEN }} --url ${{ secrets.FIGMA_URL }} --versionName ${{ github.event.inputs.version }}
